Updated package names for library and sample app Removed private files via gitignore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Android UI Library Project</string>
+
+    <string name="app_name">Android ChatView Sample</string>
+
 </resources>
