--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
     <string name="app_name">Android ChatView Sample</string>
+    <string name="start_typing">Start typing</string>
 
 </resources>
